// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiAvatar allows a name composed entirely of whitespace 1`] = `
<div
  aria-label="aria-label"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#ee789d;color:#000000"
  title="  "
>
  <span
    aria-hidden="true"
  >
      
  </span>
</div>
`;

exports[`OuiAvatar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props color as null is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props color as plain is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user ouiAvatar--plain"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props color as string is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#000;color:#FFFFFF"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props iconType and iconColor as null is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-label="name"
    class="ouiAvatar__icon"
    data-ouiicon-type="bolt"
  />
</div>
`;

exports[`OuiAvatar props iconType and iconColor is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-label="name"
    class="ouiAvatar__icon"
    color="primary"
    data-ouiicon-type="bolt"
  />
</div>
`;

exports[`OuiAvatar props iconType and iconSize is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-label="name"
    class="ouiAvatar__icon"
    color="#000000"
    data-ouiicon-type="bolt"
  />
</div>
`;

exports[`OuiAvatar props iconType is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-label="name"
    class="ouiAvatar__icon"
    color="#000000"
    data-ouiicon-type="bolt"
  />
</div>
`;

exports[`OuiAvatar props imageUrl is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000;background-image:url(image url)"
  title="name"
/>
`;

exports[`OuiAvatar props initials is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    l
  </span>
</div>
`;

exports[`OuiAvatar props initialsLength is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    na
  </span>
</div>
`;

exports[`OuiAvatar props isDisabled is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user ouiAvatar-isDisabled"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props size l is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--l ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props size m is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props size s is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--s ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props size xl is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--xl ouiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar props type is rendered 1`] = `
<div
  aria-label="name"
  class="ouiAvatar ouiAvatar--m ouiAvatar--space"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`OuiAvatar should throw error if color is not a hex 1`] = `"OuiAvatar needs to pass a valid color. This can either be a three or six character hex value"`;
